2008-06-17 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Allow choices starting with "From". Even if they do not
	  point to a valid composite option.
	* renderer.c: Parse more complex command lines correctly when looking
	  for the "gs" executable

2008-06-17 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c, postscript.c: fixed bug #138 (foomatic-rip does not
	  always insert the code pieces of the members of composite options)

2007-06-13  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: When replacing elements of the Ghostscript command line,
	  do not remove the spaces between the items. This made printing with
	  the new foomatic-rip not working in general for most cases.

2008-05-11 Lars Uebernickel <larsuebernickel@gmx.de>
	* pdf backend: removed poppler dependency, process pdfs with libgs
	now. Changed the buildsystem to reflect this.

2008-04-23 Lars Uebernickel <larsuebernickel@gmx.de>

	* foomatic-rip.c, configure.ac: Compose the current version out of the
	contents of VERSION and `bzr revno`. It is now possible to find out
	foomatic-rip's version by calling it with one of "--version", "-v",
	"--help", or "-h".

2008-04-22 Lars Uebernickel <larsuebernickel@gmx.de>

	* foomatic-rip.c, options.c: Fixed a bug in option parsing (some
	  options were not read correctly).

	  Let option settings for the "PageSetup" sections of the
	  PostScript input file really be inserted in and not before the
	  "PageSetup" sections.

2008-04-21 Lars Uebernickel <larsuebernickel@gmx.de>

	* postscript.c, options.c: New placeholder "&rbinumcopies;" which gets
	replaced by the value set in the "%RBINumCopies: ..." or
	"%%RBINumCopies: ..." line in the PostScript input. If the PostScript
	input does not contain such lines, the number of copies according to
	the foomatic-rip command line is inserted. Feature request of George
	Liu from Ricoh.

2008-03-17 Lars Uebernickel <larsuebernickel@gmx.de>
	* foomaticrip.c, options.c: Moved buildcommandline() and