@@ -1,3 +1,7 @@
+2008-06-22 Lars Uebernickel <larsuebernickel@gmx.de>
+	* options.c: Allow float values on *OrderDependency settings. This is
+	valid according to the PPD spec, and is used by some HP PPDs.
+
 2008-06-17 Lars Uebernickel <larsuebernickel@gmx.de>
 	* options.c: Allow choices starting with "From". Even if they do not
 	  point to a valid composite option.
